[gd_scene load_steps=13 format=3 uid="uid://clw77e6wtpxd"]

[ext_resource type="Script" path="res://Player.gd" id="1"]

[sub_resource type="Animation" id="Animation_yvfq5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jxphv"]
resource_name = "TurnBackBehind"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.28, 1),
"update": 0,
"values": [Vector3(0, 3.12414, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.785398, 0, -0.349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ak2qr"]
resource_name = "TurnBackLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0.0872665), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nr4gl"]
resource_name = "TurnBackRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector3(0, -1.5708, -0.0872665), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nca58"]
resource_name = "TurnBehind"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.28, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 3.12414, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.353553, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.785398, 0, -0.349066), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_iiysb"]
resource_name = "TurnLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0.0872665)]
}

[sub_resource type="Animation" id="Animation_62dqm"]
resource_name = "TurnRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -1.5708, -0.0872665)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihqhy"]
_data = {
"RESET": SubResource("Animation_yvfq5"),
"TurnBackBehind": SubResource("Animation_jxphv"),
"TurnBackLeft": SubResource("Animation_ak2qr"),
"TurnBackRight": SubResource("Animation_nr4gl"),
"TurnBehind": SubResource("Animation_nca58"),
"TurnLeft": SubResource("Animation_iiysb"),
"TurnRight": SubResource("Animation_62dqm")
}

[sub_resource type="Environment" id="Environment_nqge6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2lke"]
size = Vector2(88, 667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhvf6"]
size = Vector2(755, 70)

[node name="Main" type="Node"]

[node name="World" type="Node3D" parent="."]

[node name="Map" type="Node3D" parent="World"]

[node name="Floor" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(15.171, 0, 0, 0, 0.111386, 0, 0, 0, 14.0544, 0, 0, 16.2004)

[node name="Floor2" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(15.5253, 0, 0, 0, 0.111386, 0, 0, 0, 19.0745, 0, 8.40601, 14.8562)

[node name="Wall1" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(0.51382, 0, 0, 0, 8.80967, 0, 0, 0, 5.06741, 7.13356, 3.68296, 20.6732)
size = Vector3(1, 1.08961, 1)

[node name="Wall8" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(0.51382, 0, 0, 0, 8.80967, 0, 0, 0, 5.06741, 6.59591, 3.8104, 11.4072)

[node name="Wall9" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(0.51382, 0, 0, 0, 8.80967, 0, 0, 0, 5.06741, -6.03416, 4.16414, 11.2486)

[node name="Wall10" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(0.51382, 0, 0, 0, 1.98527, 0, 0, 0, 9.39067, -6.1221, 7.54902, 16.065)

[node name="Wall11" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(0.51382, 0, 0, 0, 1.98527, 0, 0, 0, 9.39067, 7.0229, 8.01144, 15.1616)

[node name="Wall2" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(0.51382, 0, 0, 0, 8.80967, 0, 0, 0, 6.16435, -5.98312, 4.20249, 20.6581)

[node name="Wall3" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(14.4495, 0, 0, 0, 10.2722, 0, 0, 0, 0.955591, 0.372937, 3.53078, 8.56654)

[node name="Wall4" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(14.4495, 0, 0, 0, 5.44607, 0, 0, 0, 0.955591, 0.833143, 0.385427, 23.6198)
size = Vector3(1, 1.05937, 1)

[node name="Wall5" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(14.4495, 0, 0, 0, 1.45663, 0, 0, 0, 0.955591, 0.833143, 7.47805, 23.5539)

[node name="Wall6" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(5.92243, 0, 0, 0, 5.32721, 0, 0, 0, 0.898457, 5.31371, 4.28919, 23.5539)

[node name="Wall7" type="CSGBox3D" parent="World/Map"]
transform = Transform3D(5.92243, 0, 0, 0, 5.32721, 0, 0, 0, 0.898457, -4.22989, 4.32329, 23.5539)

[node name="Label3D" type="Label3D" parent="World/Map"]
transform = Transform3D(-0.412977, 0, 0.910741, 0, 1, 0, -0.910741, 0, -0.412977, -3.75615, 4, 18.3622)
text = "This is the left"

[node name="Label3D2" type="Label3D" parent="World/Map"]
transform = Transform3D(-0.018604, 0, -0.999827, 0, 1, 0, 0.999827, 0, -0.018604, 5.02863, 4, 19.145)
text = "This is the right"

[node name="Player" type="Node3D" parent="World"]
script = ExtResource("1")

[node name="Movements" type="Node3D" parent="World/Player"]

[node name="Head" type="Node3D" parent="World/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.99598, 16.14)

[node name="Camera3D" type="Camera3D" parent="World/Player/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.305681, -3.4869, 0.0447826)
current = true
fov = 65.0
near = 0.01
far = 8192.0

[node name="HeadMovement" type="AnimationPlayer" parent="World/Player/Head"]
libraries = {
"": SubResource("AnimationLibrary_ihqhy")
}

[node name="OmniLight3D" type="OmniLight3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.06233, 16.7338)
omni_range = 4096.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nqge6")

[node name="Overlay" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="Overlay"]

[node name="DetectLeft" type="Area2D" parent="Overlay/Left"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Left/DetectLeft"]
position = Vector2(41, 323.5)
shape = SubResource("RectangleShape2D_c2lke")

[node name="Right" type="Node2D" parent="Overlay"]

[node name="DetectRight" type="Area2D" parent="Overlay/Right"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Right/DetectRight"]
position = Vector2(1115, 323.5)
shape = SubResource("RectangleShape2D_c2lke")

[node name="Bottom" type="Node2D" parent="Overlay"]

[node name="DetectBottom" type="Area2D" parent="Overlay/Bottom"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Bottom/DetectBottom"]
position = Vector2(589.5, 621)
shape = SubResource("RectangleShape2D_mhvf6")

[node name="Top" type="Node2D" parent="Overlay"]

[node name="DetectTop" type="Area2D" parent="Overlay/Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Overlay/Top/DetectTop"]
position = Vector2(589.5, 33)
shape = SubResource("RectangleShape2D_mhvf6")

[connection signal="mouse_entered" from="Overlay/Left/DetectLeft" to="World/Player" method="_on_detect_left_mouse_entered"]
[connection signal="mouse_entered" from="Overlay/Right/DetectRight" to="World/Player" method="_on_detect_right_mouse_entered"]
[connection signal="mouse_entered" from="Overlay/Bottom/DetectBottom" to="World/Player" method="_on_detect_bottom_mouse_entered"]
[connection signal="mouse_entered" from="Overlay/Top/DetectTop" to="World/Player" method="_on_detect_top_mouse_entered"]
